[package]
name = "arthub"
version = "1.0.1"
description = "ArtHub - 游戏美术工作台"
authors = ["ArtHub Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "shell-open",           # 打开外部链接
    "window-all",           # 窗口管理
    "dialog-open",          # 文件选择对话框
    "dialog-save",          # 文件保存对话框
    "dialog-message",       # 消息对话框
    "fs-read-file",         # 读取文件
    "fs-write-file",        # 写入文件
    "fs-exists",            # 检查文件存在
    "fs-read-dir",          # 读取目录
    "fs-create-dir",        # 创建目录
    "fs-remove-file",       # 删除文件
    "fs-remove-dir",        # 删除目录
    "fs-copy-file",         # 复制文件
    "fs-rename-file",       # 重命名文件
    "path-all",             # 路径操作
    "devtools",             # 开发者工具（用于打开 DevTools）
    "custom-protocol",      # 自定义协议（必需）
    "macos-private-api"    # macOS 私有 API（用于设置窗口透明和圆角）
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["time"] }
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "synchapi", "handleapi", "errhandlingapi", "winnt"] }
windows-icons = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.25"

[features]
# 默认启用所有功能
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# 优化构建配置 - 减小二进制文件大小
[profile.release]
# 启用链接时优化（LTO）- 减小体积但增加编译时间
lto = "thin"
# 优化级别
opt-level = "z"  # 优化大小而非速度（z = 最小体积）
# 启用 strip 符号表（减小体积）
strip = true
# 减少 panic 信息大小
panic = "abort"

